--- a/web/index.html
+++ b/web/index.html
@@ -237,6 +237,10 @@
                           >
                           -&gt; OAuth2 -&gt; Client ID
                         </div>
+                        <div class="form-text" style="background-color: var(--blue); color: var(--background); padding: 0.75rem; border-radius: 6px; margin-top: 0.5rem;">
+                          <i class="bi bi-info-circle-fill" style="margin-right: 0.5rem;"></i>
+                          <strong>Auto-Start:</strong> The bot will automatically start when you enter and save Discord credentials for the first time.
+                        </div>
                       </div>
                       <div class="form-group">
                         <label for="GUILD_ID">Discord Server</label>
