fix: anonymize placeholder values to prevent GitGuardian false positives
- Masked sensitive parts of example API keys and tokens
- These were never real secrets, just UI placeholder examples
- Prevents security scanner false alarms

--- a/web/index.html
+++ b/web/index.html
@@ -232,7 +232,7 @@
                           type="password"
                           id="DISCORD_TOKEN"
                           name="DISCORD_TOKEN"
-                          placeholder="MTQyNTkwNTDwedRFAoYzMDAyMzEyNzSwoR.GHh1xM..."
+                          placeholder="MTQyNTkwNT**********************GHh1xM..."
                         />
                         <div class="form-text" data-i18n="config.discord_token_help">
                           The secret token of your bot from the
@@ -321,7 +321,7 @@
                           type="password"
                           id="JELLYSEERR_API_KEY"
                           name="JELLYSEERR_API_KEY"
-                          placeholder="MTc2MjA6WDN0ODc5NPAWNDEwLEO2LWRjMGMtNDEzMS1iNzQ3LPljQTg6YpQ5Yzg2Nw=="
+                          placeholder="MTc2MjA6************************PljQTg6YpQ5Yzg2Nw=="
                         />
                         <div class="form-text" data-i18n="config.jellyseerr_api_key_help">
                           Your API key from Jellyseerr settings
@@ -419,7 +419,7 @@
                           type="password"
                           id="JELLYFIN_API_KEY"
                           name="JELLYFIN_API_KEY"
-                          placeholder="c4b6b3c8f1d4f0a8a6c2e4d8f1b3c7a9"
+                          placeholder="c4b6b3c8****************e4d8f1b3c7a9"
                         />
                         <div class="form-text" data-i18n="config.jellyfin_api_key_help">
                           API key for your Jellyfin server. Generate one in Jellyfin Dashboard → Administration → API Keys. Required for loading libraries and enhanced features.
