--- a/web/index.html
+++ b/web/index.html
@@ -1024,6 +1024,27 @@
         }
       });
     </script>
+
+    <!-- Bot Auto-Start Confirmation Modal -->
+    <div id="bot-autostart-modal" class="modal-overlay" style="display: none;">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3>🤖 Start Bot?</h3>
+        </div>
+        <div class="modal-body">
+          <p>You've filled all the bot's requirements. Would you like to start the bot now?</p>
+          <p class="modal-note">The bot will automatically connect to Discord and start monitoring for notifications.</p>
+        </div>
+        <div class="modal-actions">
+          <button id="modal-start-yes" class="btn btn-primary">
+            <i class="bi bi-play-fill"></i> Yes, Start Bot
+          </button>
+          <button id="modal-start-no" class="btn btn-secondary">
+            <i class="bi bi-x-circle"></i> No, Save Only
+          </button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
 
