feat: add Swedish translation
Thanks to @Simon-Eklundh for the Swedish translation

--- a/web/index.html
+++ b/web/index.html
@@ -88,8 +88,7 @@
                 <div class="language-selector-auth" style="margin-bottom: 1.5rem; text-align: center;">
                   <label for="auth-language" style="display: block; margin-bottom: 0.5rem; font-size: 0.9rem; color: var(--subtext0);">Language / Sprache</label>
                   <select id="auth-language" style="width: 100%; max-width: 200px; background-color: var(--background); border: 1px solid var(--surface1); color: var(--text); padding: 0.5rem; border-radius: 8px; font-size: 0.9rem;">
-                    <option value="en">English</option>
-                    <option value="de">Deutsch</option>
+                    <!-- Languages will be populated dynamically -->
                   </select>
                 </div>
                 
@@ -184,8 +183,7 @@
                           id="LANGUAGE" 
                           name="LANGUAGE"
                           style="width: 100%; background-color: var(--background); border: 1px solid var(--surface1); color: var(--text); padding: 0.75rem; border-radius: 8px; font-size: 1rem;">
-                          <option value="en">English</option>
-                          <option value="de">Deutsch</option>
+                          <!-- Languages will be populated dynamically -->
                         </select>
                         <div class="form-text" data-i18n="config.language_help">Select your preferred language for the interface.</div>
                       </div>
